fixed overflow bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@ header {
 }
 body {
     background-color: lightgray;
-    height: 100%;
+/*    height: 100%;*/
 }
 .title {
     color: darkslategray;
@@ -27,7 +27,7 @@ header .menuButton {
 }
 
 .ideaBox {
-    overflow-y: auto;
+/*    overflow-y: hidden;*/
 }
 
 .idea {
